despliegues/ejemplo6-deployment-nginx.yaml
---
kind:           Deployment
apiVersion:     apps/v1
metadata:
    name:       nginx-deployment

spec:
    replicas: 5
    
    selector:
        matchLabels:
            app: miwebserver
    
    template:
        nodeSelector:
            Zona: EUROPA
            
        metadata:
            labels:
                app: miwebserver            
        spec:
            containers:
                - name:     nginx-contenedor
                  image:    nginx:latest #httpd
                  ports:
                    - containerPort: 80
