despliegues/ejemplo7-wordpress.yaml
---
# Deployment Wordpress
kind:           Deployment
apiVersion:     apps/v1
metadata:
    name:       wordpress-deployment

spec:
    replicas: 1
    
    selector:
        matchLabels:
            app: wordpress
    
    template:
        metadata:
            labels:
                app: wordpress            
        spec:
            containers:
                - name:     wordpress-contenedor
                  image:    wordpress:latest
                  ports:
                    - containerPort: 80
                  volumeMounts:
                    - name: datos-wordpress
                      mountPath: /var/www/html
            volumes:
                - name: datos-wordpress
                  persistentVolumeClaim:
                    claimName: pvc-wordpress

---
# Service Wordpress
kind:           Service
apiVersion:     v1
metadata:
    name:       wordpress-service
spec:
    ports:
        - port: 80
          targetPort: 80
          nodePort: 30020
    selector:
        app: wordpress
    type: NodePort

---
# Service MariaDB
kind:           Service
apiVersion:     v1
metadata:
    name:       mariadb-service
spec:
    ports:
        - port: 3306
          targetPort: 3306
    selector:
        app: mariadb
    type: ClusterIP
---
# StatefulSet MariaDB

kind:           StatefulSet
apiVersion:     apps/v1
metadata:
    name:       mariadb-statefulset

spec:
    replicas: 1
    
    selector:
        matchLabels:
            app: mariadb
    
    serviceName: mariadb-service
    
    template:
        metadata:
            labels:
                app: mariadb            
        spec:
            containers:
                - name:     mariadb-contenedor
                  image:    mysql:5.7
                  ports:
                    - containerPort: 3306
                  volumeMounts:
                    - name: datos-mariadb
                      mountPath: /var/lib/mysql
    # Plantilla de peticion de Volumen Persistente para los datos MariaBD
    volumeClaimTemplates:
        - metadata:
            name: datos-mariadb
          spec:
            storageClassName: redundantedb
            resources:
                requests:
                    storage: 10Gi 
            accessModes:
                - ReadWriteOnce

---
