despliegues/ejemplo8-ingress.yaml
# Este fichero está reando unas reglas que se aplicarán sobre qué?
# nginX
#
kind: Ingress
apiVersion: networking.k8s.io/v1

metadata:
    name: wordpress
    annotations:
        kubernetes.io/ingress.class: nginx

spec:
    rules:
        - host: miwordpress.com
          http:
            paths:
                - path: /
                  pathType: Prefix
                  backend: 
                    service:
                        name: wordpress-service  # ClusterIP
                        port:
                            number: 80
    tls:
        - hosts:
            - miwordpress.com
          secretName: my-cert-secret
